Implement equals, hashCode and isConvertableTo in ObjectType.